alignment fix

--- a/whatsapp-client/src/components/ChatContainer/chatContainerStyles.module.scss
+++ b/whatsapp-client/src/components/ChatContainer/chatContainerStyles.module.scss
@@ -21,6 +21,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  text-align: center;
   background-color: #262d31;
   height: 100%;
   .idleDiv {
